--- a/src/pages/home/home.template.hbs
+++ b/src/pages/home/home.template.hbs
@@ -8,15 +8,14 @@
 
     <main>
         <div class="bg-workspace bg-cover">
-            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-20 text-center lg:pt-32">
+            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-12 text-center lg:pt-32">
                 <h1 class="mx-auto max-w-4xl font-display text-5xl font-medium tracking-tight text-slate-50 sm:text-6xl">
                     Let's start enjoying watching your favorite movies with MovieMingle   
                 </h1>
             </div>
-            <div class="gap-2 flex-col flex mx-auto max-w-xl px-4 sm:px-5 lg:px-20 pb-32  text-center lg:pt-32">
-                <button type="button" class="ml-28 w-60 h-10 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-300 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Sign In</button>
-                <button type="button"
-                    class="ml-28 w-60 h-10 text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-300 focus:ring-4 focus:ring-gray-100 font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Sign Up</button>
+            <div class="gap-1 flex-col flex mx-auto max-w-xl px-4 sm:px-5 lg:px-20 pb-28  text-center lg:pt-32">
+                <route-button caption="Sign In" class-name="block w-full"></route-button>
+                <route-button caption="Sign Up" class-name="block w-full"></route-button>
             </div>
         </div>
         
