--- a/src/pages/home/home.template.hbs
+++ b/src/pages/home/home.template.hbs
@@ -8,15 +8,17 @@
 
     <main>
         <div class="bg-workspace bg-cover">
-            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-12 text-center lg:pt-32">
+            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-16 pb-2 text-center lg:pt-32">
                 <h1 class="mx-auto max-w-4xl font-display text-5xl font-medium tracking-tight text-slate-50 sm:text-6xl">
                     Let's start enjoying watching your favorite movies with MovieMingle   
                 </h1>
             </div>
-            <div class="gap-1 flex-col flex mx-auto max-w-xl px-4 sm:px-5 lg:px-20 pb-28  text-center lg:pt-32">
-                <route-button caption="Sign In" class-name="block w-full"></route-button>
-                <route-button caption="Sign Up" class-name="block w-full"></route-button>
-            </div>
+            <nav class="flex gap-5 pt-24 pb-56 justify-center">
+                <router-link href="" class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300" label="Sign In">Sign In</router-link>
+                <router-link href=""
+                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300"
+                    label="Sign In">Sign Up</router-link>
+            </nav>
         </div>
         
     </main>
