fixed bugs and added navigation between pages

--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -5,6 +5,9 @@
         <app-route path="/primary/:id" title="Primary Page" component="primary-page"></app-route>
         <app-route path="/favorites/:id" title="Favorites Page" component="favorites-page"></app-route>
         <app-route path="/404" title="404 | Not Found" component="not-found"></app-route>
+        <app-route path="/sign-in" title="SignIn page" component="sign-in-page"></app-route>
+        <app-route path="/sign-up" title="SignUp page" component="sign-up-page"></app-route>
+
         <app-outlet></app-outlet>
     </app-router>
 </div>
