--- a/src/app.template.hbs
+++ b/src/app.template.hbs
@@ -1,13 +1,13 @@
 <ui-loader loading="{{ isLoading }}" class-name="z-10 bg-white"></ui-loader>
 <div>
     <app-router>
-        <app-route path="/" title="Home Page" component="home-page"></app-route>
-        <app-route path="/primary/:id" title="Primary Page" component="primary-page"></app-route>
-        <app-route path="/favorites/:id" title="Favorites Page" component="favorites-page"></app-route>
-        <app-route path="/404" title="404 | Not Found" component="not-found"></app-route>
-        <app-route path="/sign-in" title="SignIn page" component="sign-in-page"></app-route>
-        <app-route path="/sign-up" title="SignUp page" component="sign-up-page"></app-route>
-
+        <app-route path="${props.routes.home}" title="Home Page" component="home-page"></app-route>
+        <app-route path="${props.routes.signIn}" title="Sign In" component="sign-in-page"></app-route>
+        <app-route path="${props.routes.signUp}" title="Sign Up" component="sign-up-page"></app-route>
+        <app-route path="${props.routes.primary}" title="Primary Page" component="primary-page"></app-route>
+        <app-route path="${props.routes.favorites}" title="Favorites Page" component="favorites-page"></app-route>
+        <app-route path="${props.routes.film}/:id" title="Film Page" component="film-page"></app-route>
+        <app-route path="${props.routes.notFound}" title="404 | Not Found" component="not-found"></app-route>
         <app-outlet></app-outlet>
     </app-router>
 </div>
