--- a/src/pages/sign-in/sign-in.template.hbs
+++ b/src/pages/sign-in/sign-in.template.hbs
@@ -1,1 +1,43 @@
-<h1>Кристина умница</h1>
+<div class="grid grid-rows-layout min-h-screen">
+    <header class="p-5 bg-black flex justify-center">
+        <hgroup class="cursor-pointer flex gap-5">
+            <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+            <h1 class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
+                MovieMingle</h1>
+        </hgroup>
+    </header>
+
+    <main>
+        <div class="bg-workspace bg-cover">
+            <div class="flex justify-center mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pb-32 text-center lg:pt-20">
+                <ui-loader loading="{{isLoading}}" class-name="z-1 bg-white/70"></ui-loader>
+                <div class="bg-white px-5 w-96 mt-6 rounded-lg border-solid">
+                    <div class="mt-4">
+                        <h1 class="text-2xl">Sign In</h1>
+                        <form class="flex flex-col gap-3 sign-in-form mt-12">
+                            <ui-input label="Email address" name="email" type="email" error="{{errors.email}}"></ui-input>
+                            <ui-input label="Password" type="password" name="password"></ui-input>
+                            <ui-button caption="Sign In" class-name="block w-full"></ui-button>
+                        </form>
+                        <p class="text-slate-500 mt-3 text-sm mb-8">Don't have an account?
+                            <route-link label="Let's register!" class="text-slate-900 underline" href="${props.routes.signUp}"></route-link>
+                        </p>
+                    </div>
+                </div>
+                {{!-- <h1
+                    class="mx-auto max-w-4xl font-display text-5xl font-medium tracking-tight text-slate-50 sm:text-6xl">
+                    Let's start enjoying watching your favorite movies with MovieMingle
+                </h1> --}}
+            </div>
+            {{!-- <nav class="flex gap-5 pt-24 pb-56 justify-center">
+                <route-link href="${props.routes.signIn}"
+                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300"
+                    label="Sign In"></route-link>
+                <route-link href="${props.routes.signUp}"
+                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300"
+                    label="Sign Up"></route-link>
+            </nav> --}}
+        </div>
+
+    </main>
+</div>
