--- a/src/pages/sign-up/sign-up.template.hbs
+++ b/src/pages/sign-up/sign-up.template.hbs
@@ -18,7 +18,7 @@
                             <ui-input label="Email address" name="email" type="email"
                                 error="{{errors.email}}"></ui-input>
                             <ui-input label="Password" type="password" name="password"></ui-input>
-                            <ui-input label="Password" type="password" name="password"></ui-input>
+                            <ui-input label="Password" type="password" name="repeat-password"></ui-input>
                             <ui-button caption="Sign Up" class-name="block w-full"></ui-button>
                         </form>
                         <p class="text-slate-500 mt-3 text-sm mb-8">Already have an account?
