--- a/src/pages/not-found/not-found.template.hbs
+++ b/src/pages/not-found/not-found.template.hbs
@@ -1,1 +1,3 @@
-<h1>404 | Not Found</h1>
+<div class="flex justify-center">
+    <img src="../../../images/3959810.jpg" width="600" height="600" alt="error-img">
+</div>
