--- a/src/pages/primary/primary.template.hbs
+++ b/src/pages/primary/primary.template.hbs
@@ -1,34 +1,101 @@
 <div class="relative">
     <div class="grid grid-rows-layout  w-full">
-        <header class="p-5 bg-black flex justify-center fixed w-full z-50 fixed">
-            <hgroup class="flex gap-5">
-                <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
-                <h1
-                    class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
-                    MovieMingle</h1>
-            </hgroup>
+        <header class="p-5 bg-black flex w-full z-50 fixed">
+            <div class="flex grow">
+                <hgroup class="flex gap-5">
+                    <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+                    <h1 class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
+                        MovieMingle</h1>
+                </hgroup>
+            </div>
+            
+           <div class="flex gap-10 self-end mb-3">
+                <hgroup class="flex gap-1">
+                    <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="saved-items-logo">
+                    <route-link label="Saved Items" class="text-slate-50 text-lg"></route-link>
+                </hgroup>
+                <hgroup class="flex gap-1">
+                    <img src="../../../images/user-alt-1-svgrepo-com (2).svg" width="20" height="20" alt="user-logo">
+                    <route-link label="Email" class="text-slate-50 text-lg"></route-link>
+                </hgroup>
+                <hgroup class="flex gap-1">
+                    <img src="../../../images/logout-svgrepo-com (5).svg" alt="logout-icon" class="cursor-pointer" width="20" height="20">
+                    {{#each links}}
+                    <route-link class="text-slate-50 text-lg" href="{{this.href}}" label="{{this.label}}"></route-link>
+                    {{/each}}
+                </hgroup>
+           </div> 
         </header>
+        
         <div class="bg-workspace bg-cover mt-20 pt-2 bg-no-repeat h-screen w-full fixed"></div>
-        <div class="flex justify-center mt-8 absolute items-center translate-x-1/3" style="padding-top: 90px;">s
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-4">
+            <div class="flex mb-20 justify-center mt-8 absolute items-center flex-col translate-x-1/3" style="padding-top: 90px;">
+            <form class="mb-10">
+            <div class="flex">
+                <select 
+                    class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-e-0 border-gray-300 dark:border-gray-700 dark:text-white rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-300 dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
+                    > <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="m1 1 4 4 4-4" />
+                    </svg>
+                        <option value="all">All categories</option>
+                        <option value="romantic">Romantic</option>
+                        <option value="action">Action</option>
+                        <option value="family">Family</option>
+                    </select>
+              
+                    <div class="relative w-full">
+                        <input type="search" size="100" id="search-dropdown"
+                            class="block w-full p-2.5 z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg rounded-s-gray-100 rounded-s-2 border border-gray-300 focus:ring-gray-500 focus:border-gray-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-gray-500"
+                            placeholder="Search" required />
+                        <button type="submit"
+                            class="absolute top-0 end-0 p-2.5 h-full text-sm font-medium text-white bg-yellow-500 rounded-e-lg border border-yellow-500 hover:bg-yellow-700 focus:ring-4 focus:outline-none focus:ring-yellow-300 dark:bg-yellow-300 dark:hover:bg-yellow-700 dark:focus:ring-yellow-800"><svg
+                            class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <div class="mb-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
                 {{#each movies}}
-                <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-                    <div class="flex gap-5">
-                        <img class="h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
+                <div class="bg-black text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  transition hover:scale-105">
+                    <div class="flex gap-2">
+                        <img class="flex rounded-lg h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
                         <div class="flex flex-col py-2 gap-3">
                             <p>Rating: {{this.rating}}</p>
                             <p>Year: {{this.year}}</p>
                         </div>
                     </div>
-                    <div class="p-4 flex-grow flex flex-col justify-between">
-                        <h2 class="text-xl font-bold mb-2 text-center">{{this.title}}</h2>
-                        <button class="mt-2 w-full px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
+                    <div class="p-4 flex-grow text-slate-50 flex flex-col justify-between">
+                        <hgroup class="flex gap-2">
+                            <h2 class="text-xl mb-2 text-center">{{this.title}}</h2>
+                            <a href="#">
+                                <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="fav-item-logo" class="mt-1" id="#pop-up">
+                                <div class="third-page__more-info" id="more-info">
+                                    <p class="text-xs bg-white/20 rounded third-page__p">add to "Saved"</p>
+                                </div>
+                            </a>
+                        </hgroup>
+                        
+                        <button class="mt-2 w-full px-4 py-2 bg-yellow-600 text-slate-50 text-base font-medium rounded transition hover:scale-105 hover:bg-yellow-700"
                             type="button">More
                         </button>
                     </div>
                 </div>
                 {{/each}}
             </div>
+            
         </div>
+        <footer class="bg-black absolute z-50 w-full">
+            <div class="text-slate-50 text-base font-medium">
+                <a href="index.html" class="footer_logo">MovieMingle</a>
+                <p>&copy; MovieMingle</p>
+            </div>
+        </footer>
     </div>
+    
 </div>
+
