--- a/src/pages/favorites/favorites.template.hbs
+++ b/src/pages/favorites/favorites.template.hbs
@@ -1,1 +1,61 @@
-<h1>favorites</h1>
+<div class="relative">
+    <div class="grid grid-rows-layout  w-full">
+        <header class="p-5 bg-black flex w-full z-50 fixed shadow-black shadow-xl">
+            <div class="flex grow">
+                <hgroup class="flex gap-5">
+                    <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+                    <h1
+                        class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
+                        MovieMingle</h1>
+                </hgroup>
+            </div>
+
+            <div class="flex gap-10 self-end mb-3">
+                <hgroup class="flex gap-1">
+                    <img src="../../../images/arrow-to-left-svgrepo-com.svg" alt="arrow-to-back" height="20" width="20" class="mt-3">
+                    <route-link label="back" class="text-slate-50/80 text-xl mt-3" href="${props.routes.primary}"></route-link>
+                </hgroup>
+                
+                <div class="text-slate-50 sm:text-3xl text-3xl font-medium mt-1">Saved Items</div>
+            </div>
+        </header>
+
+        <div class="bg-workspace bg-cover mt-20 pt-2 bg-no-repeat h-screen w-full fixed"></div>
+        <div class="flex mb-20 justify-center mt-8 absolute items-center flex-col translate-x-1/3"
+            style="padding-top: 90px;">
+            <div class="mb-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
+                {{#each movies}}
+                <div
+                    class="bg-black text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  transition hover:scale-105">
+                    <div class="flex gap-2">
+                        <img class="flex rounded-lg h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
+                        <div class="flex flex-col py-2 gap-3">
+                            <p>Rating: {{this.rating}}</p>
+                            <p>Year: {{this.year}}</p>
+                        </div>
+                    </div>
+                    <div class="p-4 flex-grow text-slate-50 flex flex-col justify-between">
+                        <hgroup class="flex gap-2">
+                            <h2 class="text-xl mb-2 text-center">{{this.title}}</h2>
+                            <a href="#">
+                                <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20"
+                                    alt="fav-item-logo" class="mt-1 relative">
+                                <div class="hidden relative hover:block hover:absolute ">
+                                    <p class="text-xs bg-white/20 rounded ">add to "Saved"</p>
+                                </div>
+                            </a>
+                        </hgroup>
+
+                        <button
+                            class="mt-2 w-full px-4 py-2 bg-yellow-600 text-slate-50 text-base font-medium rounded transition hover:scale-105 hover:bg-yellow-700"
+                            type="button">More
+                        </button>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+        \
+    </div>
+
+</div>
