--- a/src/pages/primary/primary.template.hbs
+++ b/src/pages/primary/primary.template.hbs
@@ -1,6 +1,6 @@
 <div class="relative">
     <div class="grid grid-rows-layout  w-full">
-        <header class="p-5 bg-black flex w-full z-50 fixed">
+        <header class="p-5 bg-black flex w-full z-50 fixed shadow-black shadow-xl">
             <div class="flex grow">
                 <hgroup class="flex gap-5">
                     <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
@@ -10,9 +10,11 @@
             </div>
             
            <div class="flex gap-10 self-end mb-3">
+            
                 <hgroup class="flex gap-1">
                     <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="saved-items-logo">
-                    <route-link label="Saved Items" class="text-slate-50 text-lg"></route-link>
+                    <route-link class="text-slate-50 text-lg" href="${props.routes.favorites}" label="Saved Items"></route-link>
+                    
                 </hgroup>
                 <hgroup class="flex gap-1">
                     <img src="../../../images/user-alt-1-svgrepo-com (2).svg" width="20" height="20" alt="user-logo">
@@ -20,10 +22,11 @@
                 </hgroup>
                 <hgroup class="flex gap-1">
                     <img src="../../../images/logout-svgrepo-com (5).svg" alt="logout-icon" class="cursor-pointer" width="20" height="20">
-                    {{#each links}}
-                    <route-link class="text-slate-50 text-lg" href="{{this.href}}" label="{{this.label}}"></route-link>
-                    {{/each}}
+                    
+                    <route-link class="text-slate-50 text-lg" href="${props.routes.signUp}" label="Log Out"></route-link>
+                    
                 </hgroup>
+                
            </div> 
         </header>
         
@@ -59,7 +62,7 @@
                     </div>
                 </div>
             </form>
-            <div class="mb-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
+            <div class="mb-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
                 {{#each movies}}
                 <div class="bg-black text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  transition hover:scale-105">
                     <div class="flex gap-2">
@@ -73,9 +76,9 @@
                         <hgroup class="flex gap-2">
                             <h2 class="text-xl mb-2 text-center">{{this.title}}</h2>
                             <a href="#">
-                                <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="fav-item-logo" class="mt-1" id="#pop-up">
-                                <div class="third-page__more-info" id="more-info">
-                                    <p class="text-xs bg-white/20 rounded third-page__p">add to "Saved"</p>
+                                <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="fav-item-logo" class="mt-1 relative">
+                                <div class="hidden relative hover:block hover:absolute ">
+                                    <p class="text-xs bg-white/20 rounded ">add to "Saved"</p>
                                 </div>
                             </a>
                         </hgroup>
@@ -87,15 +90,15 @@
                 </div>
                 {{/each}}
             </div>
-            
+            <footer class="absolute bottom-0 z-50 w-full">
+                <div class="text-slate-50/50 text-sm font-medium">
+                    <p>&copy; MovieMingle</p>
+                </div>
+            </footer>
         </div>
-        <footer class="bg-black absolute z-50 w-full">
-            <div class="text-slate-50 text-base font-medium">
-                <a href="index.html" class="footer_logo">MovieMingle</a>
-                <p>&copy; MovieMingle</p>
-            </div>
-        </footer>
+    \
     </div>
     
 </div>
+
 
