add logout, popover and fix sign up bag

--- a/src/pages/home/home.template.hbs
+++ b/src/pages/home/home.template.hbs
@@ -16,7 +16,7 @@
             <nav class="flex gap-5 pt-24 pb-56 justify-center">
                 {{#each links}}
                 <route-link href="{{this.href}}"
-                    class="cursor-pointer w-72 text-center h-8 mt-2 no-underline border-none rounded text-slate-50 text-base font-medium inline-block bg-yellow-600 transition hover:bg-yellow-700 hover:scale-105"
+                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded text-slate-50 text-base font-medium inline-block bg-yellow-600 transition hover:bg-yellow-700 hover:scale-105"
                     label="{{this.label}}"></route-link>
                 {{/each}}
                 
