--- a/src/pages/favorites/favorites.template.hbs
+++ b/src/pages/favorites/favorites.template.hbs
@@ -26,7 +26,7 @@
             <div class="mb-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
                 {{#each movies}}
                 <div
-                    class="bg-black text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  transition hover:scale-105">
+                    class=class="bg-black/70 text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  hover:transition hover:scale-105">
                     <div class="flex gap-2">
                         <img class="flex rounded-lg h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
                         <div class="flex flex-col py-2 gap-3">
