--- a/src/pages/primary/primary.template.hbs
+++ b/src/pages/primary/primary.template.hbs
@@ -23,7 +23,7 @@
                 <hgroup class="flex gap-1">
                     <img src="../../../images/logout-svgrepo-com (5).svg" alt="logout-icon" class="cursor-pointer" width="20" height="20">
                     
-                    <route-link class="text-slate-50 text-lg" href="${props.routes.signUp}" label="Log Out"></route-link>
+                    <route-link class="logout-link text-slate-50 text-lg" href="#" label="Log Out"></route-link>
                     
                 </hgroup>
                 
@@ -64,7 +64,7 @@
             </form>
             <div class="mb-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
                 {{#each movies}}
-                <div class="bg-black text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  transition hover:scale-105">
+                <div class="bg-black/70 text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  hover:transition hover:scale-105">
                     <div class="flex gap-2">
                         <img class="flex rounded-lg h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
                         <div class="flex flex-col py-2 gap-3">
@@ -73,14 +73,17 @@
                         </div>
                     </div>
                     <div class="p-4 flex-grow text-slate-50 flex flex-col justify-between">
-                        <hgroup class="flex gap-2">
-                            <h2 class="text-xl mb-2 text-center">{{this.title}}</h2>
-                            <a href="#">
-                                <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="fav-item-logo" class="mt-1 relative">
-                                <div class="hidden relative hover:block hover:absolute ">
-                                    <p class="text-xs bg-white/20 rounded ">add to "Saved"</p>
-                                </div>
-                            </a>
+                        <hgroup class="flex gap-2 popover group">
+                            <h2 class="text-xl text-center">{{this.title}}</h2>
+                            <div class="trigger">
+                                <button data-popover-target="popover-top" data-popover-placement="top" type="button">
+                                    <img src="../../../images/heart-svgrepo-com.svg" width="20" height="20" alt="fav-item-logo" class="mt-1 relative">
+                                
+                                </button>
+                            </div>
+                            <div class="hidden group-hover:block">
+                                <p class="text-xs bg-white/20 text-black rounded ">add to "Saved"</p>
+                            </div>
                         </hgroup>
                         
                         <button class="mt-2 w-full px-4 py-2 bg-yellow-600 text-slate-50 text-base font-medium rounded transition hover:scale-105 hover:bg-yellow-700"
