--- a/src/pages/primary/primary.template.hbs
+++ b/src/pages/primary/primary.template.hbs
@@ -5,8 +5,9 @@
             <div class="flex grow">
                 <hgroup class="flex gap-5">
                     <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
-                    <h1 class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
-                        MovieMingle</h1>
+                    <route-link label="MovieMingle" href="${props.routes.primary}"
+                        class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
+                        MovieMingle</route-link>
                 </hgroup>
             </div>
             
