--- a/src/pages/primary/primary.template.hbs
+++ b/src/pages/primary/primary.template.hbs
@@ -37,21 +37,21 @@
             <div class="flex mb-20 justify-center mt-8 absolute items-center flex-col translate-x-1/3" style="padding-top: 90px;">
             <form class="mb-10">
             <div class="flex">
-                <select 
-                    class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-e-0 border-gray-300 dark:border-gray-700 dark:text-white rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-300 dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
+                <select id="category-dropdown" name="category"
+                    class="movie-list flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-e-0 border-gray-300 dark:border-gray-700 dark:text-white rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-300 dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800"
                     > <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="m1 1 4 4 4-4" />
                     </svg>
                         <option value="all">All categories</option>
-                        <option value="romantic">Romantic</option>
-                        <option value="action">Action</option>
-                        <option value="family">Family</option>
+                        <option value="Romantic">Romantic</option>
+                        <option value="Action">Action</option>
+                        <option value="Family">Family</option>
                     </select>
               
                     <div class="relative w-full">
-                        <input type="search" size="100" id="search-dropdown"
+                        <input type="search" size="100" id="search-dropdown" name="search"
                             class="block w-full p-2.5 z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg rounded-s-gray-100 rounded-s-2 border border-gray-300 focus:ring-gray-500 focus:border-gray-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-gray-500"
                             placeholder="Search" required />
                         <button type="submit"
@@ -66,7 +66,8 @@
                 </div>
             </form>
             <div class="mb-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-16">
-                {{#each movies}}
+                {{#if filteredMovies.length}}
+                {{#each filteredMovies}}
                 <div data-id="{{this.id}}" class="bg-black/70 text-slate-100/70 text-sm font-medium border-none h-80 w-56 rounded-lg shadow-lg overflow-hidden flex flex-col   max-w-sm mx-auto transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-yellow-500  hover:transition hover:scale-105">
                     <div class="flex gap-2">
                         <img class="flex rounded-lg h-48 object-cover" src="{{this.img}}" alt="{{this.title}}">
@@ -96,6 +97,11 @@
                     </div>
                 </div>
                 {{/each}}
+                {{else}}
+                <p class="text-slate-50 text-xl font-medium">No movies found</p>
+                {{/if}}
+
+            
             
             </div>
             <footer class="absolute bottom-0 z-50 w-full">
