fixed images path

--- a/src/pages/film/film.template.hbs
+++ b/src/pages/film/film.template.hbs
@@ -3,7 +3,7 @@
         <header class="p-5 bg-black flex w-full z-50 fixed shadow-black shadow-xl">
             <div class="flex grow">
                 <hgroup class="flex gap-5">
-                    <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+                    <img src="/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
                     <route-link label="MovieMingle" href="${props.routes.primary}"
                         class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
                         MovieMingle</route-link>
