--- a/src/pages/home/home.template.hbs
+++ b/src/pages/home/home.template.hbs
@@ -1,7 +1,7 @@
 <div class="grid grid-rows-layout min-h-screen">
     <header class="p-5 bg-black flex justify-center">
         <hgroup class="cursor-pointer flex gap-5">
-            <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+            <img src="/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
             <h1 class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">MovieMingle</h1>
         </hgroup>
     </header>
