--- a/src/pages/sign-up/sign-up.template.hbs
+++ b/src/pages/sign-up/sign-up.template.hbs
@@ -1,7 +1,7 @@
 <div class="grid grid-rows-layout min-h-screen">
     <header class="p-5 bg-black flex justify-center">
         <hgroup class="cursor-pointer flex gap-5">
-            <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+            <img src="/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
             <h1 class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
                 MovieMingle</h1>
         </hgroup>
@@ -27,19 +27,7 @@
                         </p>
                     </div>
                 </div>
-                {{!-- <h1
-                    class="mx-auto max-w-4xl font-display text-5xl font-medium tracking-tight text-slate-50 sm:text-6xl">
-                    Let's start enjoying watching your favorite movies with MovieMingle
-                </h1> --}}
             </div>
-            {{!-- <nav class="flex gap-5 pt-24 pb-56 justify-center">
-                <route-link href="${props.routes.signIn}"
-                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300"
-                    label="Sign In"></route-link>
-                <route-link href="${props.routes.signUp}"
-                    class="cursor-pointer w-72 text-center h-8 no-underline border-none rounded inline-block bg-white text-black  hover:bg-gray-300"
-                    label="Sign Up"></route-link>
-            </nav> --}}
         </div>
 
     </main>
