--- a/src/pages/favorites/favorites.template.hbs
+++ b/src/pages/favorites/favorites.template.hbs
@@ -3,7 +3,7 @@
         <header class="p-5 bg-black flex w-full z-50 fixed shadow-black shadow-xl">
             <div class="flex grow">
                 <hgroup class="flex gap-5">
-                    <img src="../../../images/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
+                    <img src="/popcorn-svgrepo-com.svg" width="50" height="50" alt="logo">
                     <h1
                         class="mx-auto max-w-4xl font-display text-4xl font-medium tracking-tight text-slate-50 sm:text-5xl">
                         MovieMingle</h1>
@@ -12,7 +12,7 @@
 
             <div class="flex gap-10 self-end mb-3">
                 <hgroup class="flex gap-1">
-                    <img src="../../../images/arrow-to-left-svgrepo-com.svg" alt="arrow-to-back" height="20" width="20"
+                    <img src="/arrow-to-left-svgrepo-com.svg" alt="arrow-to-back" height="20" width="20"
                         class="mt-3">
                     <route-link label="back" class="text-slate-50/80 text-xl mt-3"
                         href="${props.routes.primary}"></route-link>
