--- a/src/pages/not-found/not-found.template.hbs
+++ b/src/pages/not-found/not-found.template.hbs
@@ -1,3 +1,3 @@
 <div class="flex justify-center">
-    <img src="../../../images/3959810.jpg" width="600" height="600" alt="error-img">
+    <img src="/3959810.jpg" width="600" height="600" alt="error-img">
 </div>
